--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@ h6 {
 <a href="midnight.html"><h4>_midnight666_</h4></a>
 <a href="snake.html"><h5>snake game</h5></a>
 <a href="flappy.html"><h6>flappy bird</h6></a>
+<a href="flappy.html"><h7>flappy bird</h7></a>
 </body>
 </html>
