--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@ h6 {
 </style>
 <body>
     <img src="/Yatagarasu.svg" alt="bird with 3 legs lol" class="center">
-<h1>Hauzenex</h1>
-<h2>yes this is a yatagarasu</h2>
+    <img src="/forgot.svg" alt="hauzenex website" class="center">
 <a href="https://youtu.be/gNJRSqaT3Z4"><h3>Hauzenex video</h3></a>
 <a href="midnight.html"><h4>_midnight666_</h4></a>
 <a href="snake.html"><h5>snake game</h5></a>
