--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <style>
-    body {
+body {
   background-color: black;
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 .center {
@@ -68,7 +70,6 @@ h6 {
     font-family: "Lucida Console", "Courier New", monospace;
     color:#ED1C24
 }
-
 
 </style>
 <body>
