--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <style>
 body {
   background-color: black;
-  overflow-y: hidden; /* Hide vertical scrollbar */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
+  overflow-y: hidden; /* hide dez nuts */
+  overflow-x: hidden; /* hide dez nuts again */
 }
 
 .center {
@@ -22,63 +22,9 @@ body {
   margin-right: auto;
   width: 30%;
 }
-
-h1 {
-    font-size: 60px;
-    margin-left: 515px;
-    margin-right: 100px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color:#ED1C24
-}
-
-h2 {
-    font-size: 30px;
-    margin-left: 435px;
-    margin-top: px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color:#ED1C24
-}
-
-h3 {
-    font-size: 30px;
-    margin-left: 10px;
-    margin-top: -500px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color:#ED1C24
-}
-
-h4 {
-    font-size: 30px;
-    margin-left: 10px;
-    margin-top: 5px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color:#ED1C24
-}
-
-h5 {
-    font-size: 30px;
-    margin-left: 10px;
-    margin-top: 5px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color:#ED1C24
-}
-
-h6 {
-    font-size: 30px;
-    margin-left: 10px;
-    margin-top: 5px;
-    font-family: "Lucida Console", "Courier New", monospace;
-    color:#ED1C24
-}
-
 </style>
 <body>
     <img src="/Yatagarasu.svg" alt="bird with 3 legs lol" class="center">
     <img src="/forgot.svg" alt="hauzenex website" class="center">
-<a href="https://youtu.be/gNJRSqaT3Z4"><h3>Hauzenex video</h3></a>
-<a href="midnight.html"><h4>_midnight666_</h4></a>
-<a href="snake.html"><h5>snake game</h5></a>
-<a href="flappy.html"><h6>flappy bird</h6></a>
-<a href="flappy.html"><h7>flappy bird</h7></a>
 </body>
 </html>
