--- a/comic/index.html
+++ b/comic/index.html
@@ -1,1 +1,22 @@
-comic
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hello nerd this is hauzenex website">
+    <title>not funi didnt laff</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
+</head>
+<style>
+body {
+  background-color: black;
+  overflow-y: hidden; /* hide dez nuts */
+  overflow-x: hidden; /* hide dez nuts again */
+}
+</style>
+<body>
+upside down
+</body>
+</html>
