--- a/comic/index.html
+++ b/comic/index.html
@@ -48,7 +48,7 @@ scrollThumb();
     <div class="thumb"></div>
   </div>
   <div class="slides">
-    <div><img src="https://picsum.photos/id/1067/540/720"></div>
+    <div><img src="./1.png"></div>
     <div><img src="https://picsum.photos/id/122/540/720"></div>
     <div><img src="https://picsum.photos/id/188/540/720"></div>
     <div><img src="https://picsum.photos/id/249/540/720"></div>
