--- a/comic/index.html
+++ b/comic/index.html
@@ -49,14 +49,11 @@ scrollThumb();
   </div>
   <div class="slides">
     <div><img src="./1.png"></div>
-    <div><img src="https://picsum.photos/id/122/540/720"></div>
-    <div><img src="https://picsum.photos/id/188/540/720"></div>
-    <div><img src="https://picsum.photos/id/249/540/720"></div>
-    <div><img src="https://picsum.photos/id/257/540/720"></div>
-    <div><img src="https://picsum.photos/id/259/540/720"></div>
-    <div><img src="https://picsum.photos/id/283/540/720"></div>
-    <div><img src="https://picsum.photos/id/288/540/720"></div>
-    <div><img src="https://picsum.photos/id/299/540/720"></div>
+    <div><img src="./1.png"></div>
+    <div><img src="./1.png"></div>
+    <div><img src="./1.png"></div>
+    <div><img src="./1.png"></div>
+    <div><img src="./1.png"></div>
   </div>
 </div></body>
 </html>
