--- a/comic/index.html
+++ b/comic/index.html
@@ -10,24 +10,24 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body>
-<img src=”./1.png” alt=”Image”>
-<img src=”./2.png” alt=”Image”>
-<img src=”./3.png” alt=”Image”>
-<img src=”./4.png” alt=”Image”>
-<img src=”./5.png” alt=”Image”>
-<img src=”./6.png” alt=”Image”>
-<img src=”./7.png” alt=”Image”>
-<img src=”./8.png” alt=”Image”>
-<img src=”./9.png” alt=”Image”>
-<img src=”./10.png” alt=”Image”>
-<img src=”./11.png” alt=”Image”>
-<img src=”./12.png” alt=”Image”>
-<img src=”./13.png” alt=”Image”>
-<img src=”./14.png” alt=”Image”>
-<img src=”./15.png” alt=”Image”>
-<img src=”./16.png” alt=”Image”>
-<img src=”./17.png” alt=”Image”>
-<img src=”./18.png” alt=”Image”>
-<img src=”./19.png” alt=”Image”>
+<img src=”1.png” alt=”Image”>
+<img src=”2.png” alt=”Image”>
+<img src=”3.png” alt=”Image”>
+<img src=”4.png” alt=”Image”>
+<img src=”5.png” alt=”Image”>
+<img src=”6.png” alt=”Image”>
+<img src=”7.png” alt=”Image”>
+<img src=”8.png” alt=”Image”>
+<img src=”9.png” alt=”Image”>
+<img src=”10.png” alt=”Image”>
+<img src=”11.png” alt=”Image”>
+<img src=”12.png” alt=”Image”>
+<img src=”13.png” alt=”Image”>
+<img src=”14.png” alt=”Image”>
+<img src=”15.png” alt=”Image”>
+<img src=”16.png” alt=”Image”>
+<img src=”17.png” alt=”Image”>
+<img src=”18.png” alt=”Image”>
+<img src=”19.png” alt=”Image”>
 </body>
 </html>
