--- a/comic/index.html
+++ b/comic/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body>
-<img src="1.png" alt="lol">
+<img src="1.png" alt="lol" height="600">
 <img src=”3.png” alt=”Image”>
 <img src=”4.png” alt=”Image”>
 <img src=”5.png” alt=”Image”>
