--- a/comic/index.html
+++ b/comic/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
-<body>
+<body style="background-color:black;">
 <div>
     <img src="1.png" alt="uwu" height="600"/>
 </div>
