--- a/comic/index.html
+++ b/comic/index.html
@@ -16,5 +16,56 @@
 <div>
     <img src="2.png" alt="uwu" height="600"/>
 </div>
+<div>
+    <img src="3.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="4.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="5.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="6.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="7.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="8.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="9.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="10.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="11.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="12.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="13.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="14.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="15.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="16.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="17.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="18.png" alt="uwu" height="600"/>
+</div>
+<div>
+    <img src="19.png" alt="uwu" height="600"/>
+</div>
 </body>
 </html>
