--- a/comic/index.html
+++ b/comic/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hello nerd this is hauzenex website">
+    <meta name="description" content="Hauzenex comic or something l cry">
+    <meta name="keywords" content="hauzenex,hauz,comic,caio">
+    <meta name="author" content="caio">
     <title>not funi didnt laff</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
