--- a/comic/index.html
+++ b/comic/index.html
@@ -69,5 +69,8 @@
 <div>
     <img src="19.png" alt="uwu" height="700"/>
 </div>
+<div>
+    <img src="20.png" alt="uwu" height="700"/>
+</div>
 </body>
 </html>
