--- a/comic/index.html
+++ b/comic/index.html
@@ -72,5 +72,65 @@
 <div>
     <img src="20.png" alt="uwu" height="700"/>
 </div>
+<div>
+    <img src="21.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="22.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="23.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="24.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="25.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="26.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="27.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="28.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="29.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="30.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="31.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="32.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="33.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="34.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="35.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="36.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="37.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="38.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="39.png" alt="uwu" height="700"/>
+</div>
+<div>
+    <img src="40.png" alt="uwu" height="700"/>
+</div>
 </body>
 </html>
