--- a/comic/index.html
+++ b/comic/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
-<body style="background-color:black;">
+<body style="background-color:black;" text="#ffffff">
+hauzenex chan uwu o///o
 <div>
     <img src="1.png" alt="uwu" height="700"/>
 </div>
