--- a/comic/index.html
+++ b/comic/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color:black;" text="#ffffff">
-hauzenex chan uwu o///o
+hauzenex chan uwu o///o <br> dady very hot ez ez ez ez ez ez ezezzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz spam omg is it gonna like go through<br>t<br>h<br>e s<br>cre <br>n or osmething
 <div>
     <img src="1.png" alt="uwu" height="700"/>
 </div>
