--- a/collections/index.html
+++ b/collections/index.html
@@ -12,5 +12,5 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color:black;" text="#ffffff">
-  </body>
-  </head>
+</body>
+</html>
