--- a/collections/index.html
+++ b/collections/index.html
@@ -12,5 +12,18 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color:black;" text="#ffffff">
+
+<div class="row">
+  <div class="column">
+    <img src="crouching_predator.png" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="inhuman_fury.png" alt="Forest" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="thrivium.png" alt="Mountains" style="width:100%">
+  </div>
+</div>
+
 </body>
 </html>
