--- a/collections/index.html
+++ b/collections/index.html
@@ -15,13 +15,13 @@
 
 <div class="row">
   <div class="column">
-    <img src="crouching_predator.png" alt="Crouching Predator" style="width:100%">
+    <img src="crouching_predator.png" alt="Crouching Predator" height="700">
   </div>
   <div class="column">
-    <img src="inhuman_fury.png" alt="Inhuman Fury" style="width:100%">
+    <img src="inhuman_fury.png" alt="Inhuman Fury" height="700">
   </div>
   <div class="column">
-    <img src="thrivium.png" alt="Thrivium" style="width:100%">
+    <img src="thrivium.png" alt="Thrivium" height="700">
   </div>
 </div>
 
