--- a/collections/index.html
+++ b/collections/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color:black;" text="#ffffff">
-
+test
 <div class="row">
   <div class="column">
     <img src="crouching_predator.png" alt="Crouching Predator" height="700">
