--- a/collections/index.html
+++ b/collections/index.html
@@ -24,6 +24,8 @@ test
     <img src="thrivium.png" alt="Thrivium" height="700">
   </div>
 </div>
-
+<div class="column">
+    <img src="thrivium.png" alt="Thrivium" height="700">
+</div>
 </body>
 </html>
