--- a/collections/index.html
+++ b/collections/index.html
@@ -13,19 +13,8 @@
 </head>
 <body style="background-color:black;" text="#ffffff">
 test
-<div class="row">
-  <div class="column">
-    <img src="crouching_predator.png" alt="Crouching Predator" height="700">
-  </div>
-  <div class="column">
-    <img src="inhuman_fury.png" alt="Inhuman Fury" height="700">
-  </div>
-  <div class="column">
-    <img src="thrivium.png" alt="Thrivium" height="700">
-  </div>
-</div>
-<div class="column">
-    <img src="thrivium.png" alt="Thrivium" height="700">
-</div>
+<div>
+    <img src="Thrivium.png" alt="Thrivium" height="700"/>
+</div
 </body>
 </html>
