--- a/collections/index.html
+++ b/collections/index.html
@@ -14,7 +14,7 @@
 <body style="background-color:black;" text="#ffffff">
 test
 <div>
-    <img src="Thrivium.png" alt="Thrivium"/>
+    <img src="Crouching_Predator.png" alt="Crouching Predator"/>
 </div
 </body>
 </html>
