--- a/collections/index.html
+++ b/collections/index.html
@@ -16,5 +16,11 @@ test
 <div>
     <img src="Crouching_Predator.png" alt="Crouching Predator"/>
 </div
+<div>
+    <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+</div
+<div>
+    <img src="Night_devil.png" alt="Night devil"/>
+</div
 </body>
 </html>
