--- a/collections/index.html
+++ b/collections/index.html
@@ -13,14 +13,16 @@
 </head>
 <body style="background-color:black;" text="#ffffff">
 test
-<div>
-    <img src="Crouching_Predator.png" alt="Crouching Predator"/>
-</div
-<div>
-    <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-</div
-<div>
-    <img src="Night_devil.png" alt="Night devil"/>
-</div
+<div class="row">
+    <div class="column">
+         <img src="Crouching_Predator.png" alt="Crouching Predator"/>
+    </div
+    <div class="column">
+        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+    </div
+    <div class="column">
+        <img src="Night_devil.png" alt="Night devil"/>
+    </div>
+</div>
 </body>
 </html>
