--- a/collections/index.html
+++ b/collections/index.html
@@ -23,6 +23,24 @@ test
     <div class="column">
         <img src="Night_devil.png" alt="Night devil"/>
     </div>
+    <div class="column">
+        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+    </div
+    <div class="column">
+        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+    </div
+    <div class="column">
+        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+    </div
+    <div class="column">
+        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+    </div
+    <div class="column">
+        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+    </div
+    <div class="column">
+        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
+    </div
 </div>
 </body>
 </html>
