w3schols bel ike

--- a/collections/index.html
+++ b/collections/index.html
@@ -12,35 +12,41 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color:black;" text="#ffffff">
-test
 <div class="row">
-    <div class="column">
-         <img src="Crouching_Predator.png" alt="Crouching Predator"/>
-    </div
-    <div class="column">
-        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-    </div
-    <div class="column">
-        <img src="Night_devil.png" alt="Night devil"/>
-    </div>
-    <div class="column">
-        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-    </div
-    <div class="column">
-        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-    </div
-    <div class="column">
-        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-    </div
-    <div class="column">
-        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-    </div
-    <div class="column">
-        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-    </div
-    <div class="column">
-        <img src="Inhuman_Fury.png" alt="Inhuman Fury"/>
-    </div
+  <div class="column">
+    <img src="wedding.jpg">
+    <img src="rocks.jpg">
+    <img src="falls2.jpg">
+    <img src="paris.jpg">
+    <img src="nature.jpg">
+    <img src="mist.jpg">
+    <img src="paris.jpg">
+  </div>
+  <div class="column">
+    <img src="underwater.jpg">
+    <img src="ocean.jpg">
+    <img src="wedding.jpg">
+    <img src="mountainskies.jpg">
+    <img src="rocks.jpg">
+    <img src="underwater.jpg">
+  </div>
+  <div class="column">
+    <img src="wedding.jpg">
+    <img src="rocks.jpg">
+    <img src="falls2.jpg">
+    <img src="paris.jpg">
+    <img src="nature.jpg">
+    <img src="mist.jpg">
+    <img src="paris.jpg">
+  </div>
+  <div class="column">
+    <img src="underwater.jpg">
+    <img src="ocean.jpg">
+    <img src="wedding.jpg">
+    <img src="mountainskies.jpg">
+    <img src="rocks.jpg">
+    <img src="underwater.jpg">
+  </div>
 </div>
 </body>
 </html>
