--- a/collections/index.html
+++ b/collections/index.html
@@ -14,38 +14,40 @@
 <body style="background-color:black;" text="#ffffff">
 <div class="row">
   <div class="column">
-    <img src="wedding.jpg">
-    <img src="rocks.jpg">
-    <img src="falls2.jpg">
-    <img src="paris.jpg">
-    <img src="nature.jpg">
-    <img src="mist.jpg">
-    <img src="paris.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
   </div>
   <div class="column">
-    <img src="underwater.jpg">
-    <img src="ocean.jpg">
-    <img src="wedding.jpg">
-    <img src="mountainskies.jpg">
-    <img src="rocks.jpg">
-    <img src="underwater.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
   </div>
   <div class="column">
-    <img src="wedding.jpg">
-    <img src="rocks.jpg">
-    <img src="falls2.jpg">
-    <img src="paris.jpg">
-    <img src="nature.jpg">
-    <img src="mist.jpg">
-    <img src="paris.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
   </div>
   <div class="column">
-    <img src="underwater.jpg">
-    <img src="ocean.jpg">
-    <img src="wedding.jpg">
-    <img src="mountainskies.jpg">
-    <img src="rocks.jpg">
-    <img src="underwater.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
+    <img src="/inhuman_fury.png">
+    <img src="/night_devil.png.jpg">
+    <img src="/crouching_predator.png">
   </div>
 </div>
 </body>
