--- a/collections/index.html
+++ b/collections/index.html
@@ -14,40 +14,40 @@
 <body style="background-color:black;" text="#ffffff">
 <div class="row">
   <div class="column">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
   </div>
   <div class="column">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
   </div>
   <div class="column">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
   </div>
   <div class="column">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
-    <img src="/inhuman_fury.png">
-    <img src="/night_devil.png.jpg">
-    <img src="/crouching_predator.png">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
+    <img src="inhuman_fury.png">
+    <img src="night_devil.png.jpg">
+    <img src="crouching_predator.png">
   </div>
 </div>
 </body>
