--- a/collections/index.html
+++ b/collections/index.html
@@ -16,37 +16,37 @@
   <div class="column">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
   </div>
   <div class="column">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
   </div>
   <div class="column">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
   </div>
   <div class="column">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
     <img src="inhuman_fury.png">
-    <img src="night_devil.png.jpg">
+    <img src="night_devil.png">
     <img src="crouching_predator.png">
   </div>
 </div>
