--- a/index.html
+++ b/index.html
@@ -26,5 +26,30 @@ body {
 <body>
     <img src="/Yatagarasu.svg" alt="bird with 3 legs lol" class="center">
     <img src="/forgot.svg" alt="hauzenex website" class="center">
+<!-- Start of Globel Code -->
+<CENTER>
+<script language="JavaScript">
+var count = "hauzenex";          // Change Your Account?
+var type = "handpnt";       // Change Your Counter Image?
+var digits = "7";          // Change The Amount of Digits on Your Counter?
+var prog = "hit";          // Change to Either hit/unique?
+var statslink = "no";    // provide statistical link in counter yes/no?
+var sitelink = "no";     // provide link back to our site;~) yes/no?
+var cntvisible = "yes"; // do you want counter visible yes/no?
+</script>
+<!-- START DO NOT TAMPER WITH ANYTHING ELSE BELOW THIS LINE FOR YOUR WEBTV & UNIX VISITORS -->
+<script language="JavaScript" src="http://006.freecounters.co.uk/count-133.js">
+</script>
+<noscript>
+<a href="http://www.freecounters.co.uk" target="_blank">
+<img  src="http://006.freecounters.co.uk/count-133.pl?count=hauzenex&cntvisible=no&mode=noscript" alt="Free Counters" title="Free Counters" border="0">
+</a>The following text will not be seen after you upload your website,
+please keep it in order to retain your counter functionality 
+<br><a href="http://www.freecounters.co.uk" target="_blank">Free Trackers</a><br> <a href="http://www.freecounters.co.uk" target="_blank">Help</a><br>
+
+</noscript>
+<!-- END DO NOT TAMPER WITH ANYTHING ELSE ABOVE THIS LINE FOR YOUR WEBTV & UNIX VISITORS -->
+</CENTER>        
+<!-- End of Globel Code -->
 </body>
 </html>
