--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@ body {
   margin-right: auto;
   width: 30%;
 }
-</style>
+<body>
+    <img src="/Yatagarasu.svg" alt="bird with 3 legs lol" class="center">
+    <img src="/forgot.svg" alt="hauzenex website" class="center">
+<CENTER>
 <script language="JavaScript">
 var count = "hauzenex";          // Change Your Account?
 var type = "handpnt";       // Change Your Counter Image?
 var digits = "7";          // Change The Amount of Digits on Your Counter?
 var prog = "hit";          // Change to Either hit/unique?
 var statslink = "no";    // provide statistical link in counter yes/no?
-var sitelink = "no";     // provide link back to our site;~) yes/no?
+var sitelink = "yes";     // provide link back to our site;~) yes/no?
 var cntvisible = "yes"; // do you want counter visible yes/no?
 </script>
 <!-- START DO NOT TAMPER WITH ANYTHING ELSE BELOW THIS LINE FOR YOUR WEBTV & UNIX VISITORS -->
@@ -44,8 +47,6 @@ please keep it in order to retain your counter functionality
 
 </noscript>
 <!-- END DO NOT TAMPER WITH ANYTHING ELSE ABOVE THIS LINE FOR YOUR WEBTV & UNIX VISITORS -->
-<body>
-    <img src="/Yatagarasu.svg" alt="bird with 3 legs lol" class="center">
-    <img src="/forgot.svg" alt="hauzenex website" class="center">
+</CENTER>       
 </body>
 </html>
