--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hello nerd this is hauzenex website">
-    <title>thats only on your mind</title>
+    <title>cringeboy</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
@@ -23,7 +23,7 @@ body {
   width: 30%;
 }
 <body>
-    <img src="/Yatagarasu.svg" alt="bird with 3 legs lol" class="center">
+    <img src="/idontcarewhatyouthinkofme.png" alt="my name" class="center">
     <img src="/forgot.svg" alt="hauzenex website" class="center">
 </body>
 </html>
