--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body {
   margin-right: auto;
   width: 30%;
 }
+</style>
 <body>
     <img src="/idontcarewhatyouthinkofme.png" alt="my name" class="center">
     <img src="/forgot.svg" alt="hauzenex website" class="center">
