--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ body {
 </style>
 <body>
     <img src="/idontcarewhatyouthinkofme.png" alt="my name" class="center">
-    <img src="/forgot.svg" alt="hauzenex website" class="center">
-no
+    <img src="/ohyeahillhitthegriddy.png" alt="cowmafia members" class="center">
 </body>
 </html>
