--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ body {
 }
 </style>
 <body>
-    <img src="/idontcarewhatyouthinkofme.png" alt="my name" class="center">
-    <img src="/ohyeahillhitthegriddy.png" alt="cowmafia members" class="center">
+    <img src="/PBR.png" alt="my name" class="center">
 </body>
 </html>
