--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ body {
 }
 </style>
 <body>
-    <img src="/PBR.png" alt="my name" class="center">
+    <img src="/shialebouf.png" alt="my name" class="center">
 </body>
 </html>
