--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
 }
 </style>
 <script>
- const cars = ["backup.png","nefile.png"];
+ const cars = ["/backup.png","/nefile.png"];
   let randomIndex =
     Math.floor(
       Math.random() * cars.length
