--- a/index.html
+++ b/index.html
@@ -23,16 +23,7 @@ body {
   width: 30%;
 }
 </style>
-<script>
- const cars = ["/backup.png","/nefile.png"];
-  let randomIndex =
-    Math.floor(
-      Math.random() * cars.length
-    );
-  car.src = cars[randomIndex];
-</script>
 <body>
-    <img src="/shialebouf.png" alt="my name" class="center">
-    <img id="car"></img>
+    <img src="/denial.png" alt="cowmafia symbol" class="center">
 </body>
 </html>
