--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  margin-top: 100px;
+  width: 50%;
 }
 </style>
 <body>
