--- a/index.html
+++ b/index.html
@@ -23,8 +23,36 @@ body {
   margin-top: 80px;
   width: 40%;
 }
+
+#no {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+}
+
+.noez {
+	color: white;
+	font-size: clamp(3rem, 8vw, 8rem);
+	font-family: "Ibarra Real Nova", serif;
+
+	display: block;
+	text-decoration: none;
+	padding: clamp(0.25rem, 0.5vw, 1rem) 0rem;
+}
+
+#noez {
+	margin-left: clamp(4rem, 20vw, 48rem);
+}
 </style>
 <body>
-    <img src="/denial.png" alt="cowmafia symbol" class="center">
+<img src="/denial.png" alt="cowmafia symbol" class="center">
+<div id="no">
+	<div> id="noez">
+		<a href="/" class="noez">test1</a>
+		<a href="/" class="noez">test2</a>
+		<a href="/" class="noez">test3</a>
+		<a href="/" class="noez">test4</a>
+	</div>
+</div>
 </body>
 </html>
