--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@ body {
 #noez {
 	margin-left: clamp(4rem, 20vw, 48rem);
 }
+
+#cowmafia {
+	height: 100%;
+	width: 100%;
+
+	background-image: url("https://hauzenex.github.io/denial.png");
+
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	z-index: 0;
+}
 </style>
 <body>
 <div id="no">
@@ -53,6 +65,6 @@ body {
 		<a href="/" class="noez">test4</a>
 	</div>
 </div>
-<img src="/denial.png" alt="cowmafia symbol" class="center">
+<div id="cowmafia"></div>
 </body>
 </html>
