every single one of them

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ body {
   background-color: black;
   overflow-y: hidden; /* hide dez nuts */
   overflow-x: hidden; /* hide dez nuts again */
+  background-image: url('a');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .center {
