and not just the men

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
   background-color: black;
   overflow-y: hidden; /* hide dez nuts */
   overflow-x: hidden; /* hide dez nuts again */
-  background-image: url('a');
+  background-image: url('https://hauzenex.github.io/denial.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
