--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  background-size: 50%;
 }
 
 .center {
