--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
 </style>
 <body>
 <div id="no">
-	<div> id="noez">
+	<div id="noez">
 		<a href="/" class="noez">test1</a>
 		<a href="/" class="noez">test2</a>
 		<a href="/" class="noez">test3</a>
