ta chapadao de insetici

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ body {
 
 .noez {
 	color: white;
-	font-size: clamp(3rem, 8vw, 8rem);
-	font-family: "Ibarra Real Nova", serif;
+	font-size: clamp(1rem, 4vw, 8rem);
+	font-family: fantasy;
 
 	display: block;
 	text-decoration: none;
@@ -46,17 +46,17 @@ body {
 }
 
 #noez {
-	margin-left: clamp(4rem, 20vw, 48rem);
+	margin-left: clamp(1rem, 0vw, 48rem);
 }
 
 </style>
 <body>
 <div id="no">
 	<div id="noez">
-		<a href="/" class="noez">test1</a>
-		<a href="/" class="noez">test2</a>
-		<a href="/" class="noez">test3</a>
-		<a href="/" class="noez">test4</a>
+		<a href="/" class="noez">Hauzenex</a>
+		<a href="/" class="noez">ohmygod</a>
+		<a href="/" class="noez">Mineland</a>
+		<a href="/" class="noez">Nonono</a>
 	</div>
 </div>
 </body>
