nao perca esperanca

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
 .noez {
 	color: white;
 	font-size: clamp(1rem, 4vw, 8rem);
-	font-family: fantasy;
+	font-family: andale mono, monospace;
 
 	display: block;
 	text-decoration: none;
