--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ body {
 	color: white;
 	font-size: clamp(1rem, 4vw, 8rem);
 	font-family: andale mono, monospace;
+ 	font-weight: bold;
+
 
 	display: block;
 	text-decoration: none;
@@ -53,10 +55,10 @@ body {
 <body>
 <div id="no">
 	<div id="noez">
-		<a href="/" class="noez">Hauzenex</a>
-		<a href="/" class="noez">ohmygod</a>
-		<a href="/" class="noez">Mineland</a>
-		<a href="/" class="noez">Nonono</a>
+		<a href="/" class="noez">HAUZENEX</a>
+		<a href="/" class="noez">MINELAND</a>
+		<a href="/" class="noez">DRAWINGS</a>
+		<a href="/" class="noez">NONONO</a>
 	</div>
 </div>
 </body>
