--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <style>
 body {
-  background-color: #0f1317;
+  background-color: #0c0c0d;
   overflow-y: hidden; /* hide dez nuts */
   overflow-x: hidden; /* hide dez nuts again */
   background-image: url('https://hauzenex.github.io/denial.png');
