what are you doing bro!!!1

--- a/collections/index.html
+++ b/collections/index.html
@@ -12,43 +12,40 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color:black;" text="#ffffff">
-<div class="row">
-  <div class="column">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-  </div>
-  <div class="column">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-  </div>
-  <div class="column">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-  </div>
-  <div class="column">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-    <img src="inhuman_fury.png">
-    <img src="night_devil.png">
-    <img src="crouching_predator.png">
-  </div>
-</div>
+	<div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="crouching_predator.png">
+		</div>
+	</div>
 </body>
 </html>
