--- a/collections/index.html
+++ b/collections/index.html
@@ -17,34 +17,46 @@
 			<img src="crouching_predator.png">
 		</div>
 		<div>
-			<img src="crouching_predator.png">
+			<img src="inhuman_fury.png">
+		</div>
+		<div>
+			<img src="night_devil.png">
 		</div>
 		<div>
 			<img src="crouching_predator.png">
 		</div>
 		<div>
-			<img src="crouching_predator.png">
+			<img src="inhuman_fury.png">
 		</div>
 		<div>
 			<img src="crouching_predator.png">
 		</div>
 		<div>
-			<img src="crouching_predator.png">
+			<img src="inhuman_fury.png">
+		</div>
+		<div>
+			<img src="night_devil.png">
 		</div>
 		<div>
 			<img src="crouching_predator.png">
 		</div>
 		<div>
-			<img src="crouching_predator.png">
+			<img src="inhuman_fury.png">
 		</div>
 		<div>
 			<img src="crouching_predator.png">
 		</div>
 		<div>
-			<img src="crouching_predator.png">
+			<img src="inhuman_fury.png">
+		</div>
+		<div>
+			<img src="night_devil.png">
 		</div>
 		<div>
 			<img src="crouching_predator.png">
+		</div>
+		<div>
+			<img src="inhuman_fury.png">
 		</div>
 	</div>
 </body>
