--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
 <body>
 <div id="no">
 	<div id="noez">
-		<a href="/" class="noez">HAUZENEX</a>
+		<a href="https://hauzenex.github.io/collections/" class="noez">HAUZENEX</a>
 		<a href="/" class="noez">MINELAND</a>
 		<a href="/" class="noez">DRAWINGS</a>
 		<a href="/" class="noez">NONONO</a>
