--- a/collections/index.html
+++ b/collections/index.html
@@ -12,52 +12,38 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color:black;" text="#ffffff">
-	<div>
-		<div>
-			<img src="crouching_predator.png">
-		</div>
-		<div>
-			<img src="inhuman_fury.png">
-		</div>
-		<div>
-			<img src="night_devil.png">
-		</div>
-		<div>
-			<img src="crouching_predator.png">
-		</div>
-		<div>
-			<img src="inhuman_fury.png">
-		</div>
-		<div>
-			<img src="crouching_predator.png">
-		</div>
-		<div>
-			<img src="inhuman_fury.png">
-		</div>
-		<div>
-			<img src="night_devil.png">
-		</div>
-		<div>
-			<img src="crouching_predator.png">
-		</div>
-		<div>
-			<img src="inhuman_fury.png">
-		</div>
-		<div>
-			<img src="crouching_predator.png">
-		</div>
-		<div>
-			<img src="inhuman_fury.png">
-		</div>
-		<div>
-			<img src="night_devil.png">
-		</div>
-		<div>
-			<img src="crouching_predator.png">
-		</div>
-		<div>
-			<img src="inhuman_fury.png">
-		</div>
+
+<div class="container">
+	<div class="heading">
+		<h3>Hauzenex <span>Drawings</span></h3>
 	</div>
+	<div class="box>
+
+		<div class=" dream"="">
+			<img src="inhuman_fury.png">
+			<img src="crouching_predator.png">
+			<img src="night_devil.png">
+		</div>
+
+		<div class="dream">
+			<img src="inhuman_fury.png">
+			<img src="crouching_predator.png">
+			<img src="night_devil.png">
+		</div>
+
+		<div class="dream">
+			<img src="inhuman_fury.png">
+			<img src="crouching_predator.png">
+			<img src="night_devil.png">
+		</div>
+
+		<div class="dream">
+			<img src="inhuman_fury.png">
+			<img src="crouching_predator.png">
+			<img src="night_devil.png">
+		</div>
+
+	</div>
+
 </body>
 </html>
