--- a/collections/index.html
+++ b/collections/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
-<body style="background-color:black;" text="#ffffff">
+<body style="background-color: #0c0c0d;" text="#ffffff">
 
 <div class="container">
 	<div class="heading">
