--- a/collections/index.html
+++ b/collections/index.html
@@ -20,27 +20,35 @@
 	<div class="box>
 
 		<div class=" dream"="">
-			<img src="inhuman_fury.png">
-			<img src="crouching_predator.png">
-			<img src="night_devil.png">
+			<img src="what/1.png">
+			<img src="what/2.png">
+			<img src="what/3.png">
+			<img src="what/4.png">
+			<img src="what/5.png">
 		</div>
 
-		<div class="dream">
-			<img src="inhuman_fury.png">
-			<img src="crouching_predator.png">
-			<img src="night_devil.png">
+		<div class=" dream"="">
+			<img src="what/1.png">
+			<img src="what/2.png">
+			<img src="what/3.png">
+			<img src="what/4.png">
+			<img src="what/5.png">
 		</div>
 
-		<div class="dream">
-			<img src="inhuman_fury.png">
-			<img src="crouching_predator.png">
-			<img src="night_devil.png">
+		<div class=" dream"="">
+			<img src="what/1.png">
+			<img src="what/2.png">
+			<img src="what/3.png">
+			<img src="what/4.png">
+			<img src="what/5.png">
 		</div>
 
-		<div class="dream">
-			<img src="inhuman_fury.png">
-			<img src="crouching_predator.png">
-			<img src="night_devil.png">
+		<div class=" dream"="">
+			<img src="what/1.png">
+			<img src="what/2.png">
+			<img src="what/3.png">
+			<img src="what/4.png">
+			<img src="what/5.png">
 		</div>
 
 	</div>
