--- a/collections/index.html
+++ b/collections/index.html
@@ -13,45 +13,81 @@
 </head>
 <body style="background-color: #0c0c0d;" text="#ffffff">
 
-<div class="container">
-	<div class="heading">
-		<h3>Hauzenex <span>Drawings</span></h3>
-	</div>
-	<div class="box>
+  <h1>CSS Grid Gallery</h1>
+  <div class="container">
 
-		<div class=" dream"="">
-			<img src="what/1.png">
-			<img src="what/2.png">
-			<img src="what/3.png">
-			<img src="what/4.png">
-			<img src="what/5.png">
-		</div>
+    <div class="gallery-container w-3 h-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?nature" alt="nature">
+        </div>
+        <div class="text">Nature</div>
+      </div>
+    </div>
 
-		<div class=" dream"="">
-			<img src="what/1.png">
-			<img src="what/2.png">
-			<img src="what/3.png">
-			<img src="what/4.png">
-			<img src="what/5.png">
-		</div>
+    <div class="gallery-container w-3 h-3">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?people" alt="people">
+        </div>
+        <div class="text">People</div>
+      </div>
+    </div>
 
-		<div class=" dream"="">
-			<img src="what/1.png">
-			<img src="what/2.png">
-			<img src="what/3.png">
-			<img src="what/4.png">
-			<img src="what/5.png">
-		</div>
+    <div class="gallery-container h-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?sport" alt="sport">
+        </div>
+        <div class="text">Sport</div>
+      </div>
+    </div>
 
-		<div class=" dream"="">
-			<img src="what/1.png">
-			<img src="what/2.png">
-			<img src="what/3.png">
-			<img src="what/4.png">
-			<img src="what/5.png">
-		</div>
+    <div class="gallery-container w-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?fitness" alt="fitness">
+        </div>
+        <div class="text">Fitness</div>
+      </div>
+    </div>
 
-	</div>
+    <div class="gallery-container w-4 h-1">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?food" alt="food">
+        </div>
+        <div class="text">Food</div>
+      </div>
+    </div>
 
+    <div class="gallery-container">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?travel" alt="travel">
+        </div>
+        <div class="text">Travel</div>
+      </div>
+    </div>
+
+    <div class="gallery-container h-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?art" alt="art">
+        </div>
+        <div class="text">Art</div>
+      </div>
+    </div>
+
+    <div class="gallery-container">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="https://source.unsplash.com/1600x900/?cars" alt="cars">
+        </div>
+        <div class="text">Cars</div>
+      </div>
+    </div>
+
+  </div>
 </body>
 </html>
