--- a/collections/index.html
+++ b/collections/index.html
@@ -12,5 +12,6 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color: #0c0c0d;" text="#ffffff">
+test
 </body>
 </html>
