--- a/collections/index.html
+++ b/collections/index.html
@@ -12,6 +12,24 @@
     <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body style="background-color: #0c0c0d;" text="#ffffff">
-test
+
+<div class="container">
+
+    <h1 class="title">my drawings</h1>
+
+    <div class="image-container">
+        <img src="what/1" alt="">
+        <img src="what/2" alt="">
+        <img src="what/3" alt="">
+        <img src="what/4" alt="">
+        <img src="what/5" alt="">
+        <img src="what/3" alt="">
+        <img src="what/2" alt="">
+        <img src="what/1" alt="">
+        <img src="what/4" alt="">
+    </div>
+
+</div>
+
 </body>
 </html>
