quem tem boca vaia roma quem tem peito enfrenta o cesar

--- a/collections/index.html
+++ b/collections/index.html
@@ -18,15 +18,24 @@
     <h1 class="title">my drawings</h1>
 
     <div class="image-container">
-        <img src="what/1" alt="">
-        <img src="what/2" alt="">
-        <img src="what/3" alt="">
-        <img src="what/4" alt="">
-        <img src="what/5" alt="">
-        <img src="what/3" alt="">
-        <img src="what/2" alt="">
-        <img src="what/1" alt="">
-        <img src="what/4" alt="">
+        <img src="what/1.png" alt="">
+        <img src="what/2.png" alt="">
+        <img src="what/3.png" alt="">
+        <img src="what/4.png" alt="">
+        <img src="what/5.png" alt="">
+        <img src="what/3.png" alt="">
+        <img src="what/2.png" alt="">
+        <img src="what/1.png" alt="">
+        <img src="what/4.png" alt="">
+        <img src="what/1.png" alt="">
+        <img src="what/2.png" alt="">
+        <img src="what/3.png" alt="">
+        <img src="what/4.png" alt="">
+        <img src="what/5.png" alt="">
+        <img src="what/3.png" alt="">
+        <img src="what/2.png" alt="">
+        <img src="what/1.png" alt="">
+        <img src="what/4.png" alt="">
     </div>
 
 </div>
