--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hello nerd this is hauzenex website">
-    <title>w</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>jaya</title>
 </head>
 <body>
-<a href="https://www.youtube.com/@Hauzenex>my channel</a><br>
+  <a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
 </body>
 </html>
