--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>jaya</title>
 </head>
 <body>
-  <a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
+  <a href="https://www.youtube.com/@Hauzenex">my youtube channel</a><br>
 </body>
 </html>
