--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <a href="https://www.youtube.com/@Hauzenex">my youtube channel</a><br>
+  <a href="https://hauzenex.github.io/snake.html">snake game (not mine)</a><br>
 </body>
 </html>
