--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <title>jaya</title>
 </head>
 <body>
-  <a href="https://www.youtube.com/@Hauzenex">my youtube channel</a><br>
-  <a href="https://hauzenex.github.io/snake.html">snake game (not mine)</a><br>
+  <a href="https://www.youtube.com/@Hauzenex">My youtube channel</a><br>
+  <a href="https://hauzenex.github.io/snake.html">Snake game (not mine)</a><br>
+  <a href="a">representa sabotage</a><br>
+  <a href="a">cmoomo é inmigo</a><br>
+  <a href="a"><teste/a><br>
+  <a href="a">so what we get high</a><br>
+  <a href="a">na verdade high é</a><br>
+  <a href="a">alto ss eu sei muito</a><br>
+  <a href="a">aaaaaaaa</a><br>
+  <a href="a">testando testando</a><br>
+  <a href="a">calma ai emicida</a><br>
+  <a href="a">emicida contra cesar</a><br>
 </body>
 </html>
