--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <a href="https://www.youtube.com/@Hauzenex">My youtube channel</a><br>
-  <a href="https://hauzenex.github.io/snake.html">Snake game (not mine)</a><br>
+  <a href="snake.html">Snake game (not mine)</a><br>
   <a href="a">representa sabotage</a><br>
   <a href="a">cmoomo é inmigo</a><br>
   <a href="a">ai o trem tava vindo</a><br>
