--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <title>jaya</title>
 </head>
 <body>
-  <a href="https://www.youtube.com/@Hauzenex">My youtube channel</a><br>
-  <a href="snake.html">Snake game (not mine)</a><br>
+  <div class="linkcontainer">
+    <div><a href="#">Link 1</a></div>
+    <div><a href="#">Link 2</a></div>
+    <div><a href="#">Link 3</a></div>
+    <div><a href="#">Link 4</a></div>
+    <div><a href="#">Link 5</a></div>
+    <div><a href="#">Link 6</a></div>
+  </div>
 </body>
 </html>
