--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class="linkcontainer">
-    <div><a href="#">Link 1</a></div>
-    <div><a href="#">Link 2</a></div>
-    <div><a href="#">Link 3</a></div>
-    <div><a href="#">Link 4</a></div>
-    <div><a href="#">Link 5</a></div>
-    <div><a href="#">Link 6</a></div>
+    <div><a href="#">Hauzenex</a></div>
+    <div><a href="#">ButterMyBread</a></div>
+    <div><a href="#">IiIiIio</a></div>
+    <div><a href="#">_midnight666_</a></div>
+    <div><a href="#">wyld_lex</a></div>
+    <div><a href="#">test with a big text to see how it uh acts or something idk skull thsi is like going to the otehr side of screen or smth</a></div>
   </div>
 </body>
 </html>
