--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
   <div class="linkcontainer">
     <div><a href="#">Hauzenex</a></div>
     <div><a href="#">ButterMyBread</a></div>
-    <div><a href="#">IiIiIio</a></div>
-    <div><a href="#">_midnight666_</a></div>
-    <div><a href="#">wyld_lex</a></div>
-    <div><a href="#">test with a big text to see how it uh acts or something idk skull thsi is like going to the otehr side of screen or smth</a></div>
+    <div><a href="#">dre cenat</a></div>
   </div>
 </body>
 </html>
